changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Removed unused .cvsignore files, after all we use SVN since a long time.
 .cvsignore
 */.cvsignore
 */*/.cvsignore
 */*/*/.cvsignore
Arvid Norlander 2008-05-25

Add length parameter for some functions to be able to use snprintf instead of
sprintf in those. Fixed a char* that should have been const char* in plugin code.
Fixed some typos in protocol documentation. Also fixed indention in some code while
I was working on it anyway.
 doc/Developers/protocol
 include/sockproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
 socket/info.c
 socket/request.c
Arvid Norlander 2008-05-25

Cleanup the autoconf and automake stuff somewhat:
* Removed tests for X libraries (as the map editor is no longer a part of the server)
* Ran autoupdate to update the syntax (where it could do so).
* Add some missing checks
* Make check for gethostbyname try libc first, no need to get nsl version.
* Use AS_HELP_STRING to format help strings.
* General cleanup and reformatting to make it easier to maintain.
* Update automake syntax in some files.
 acinclude.m4
 check-fragment.am
 configure.ac
 include/autoconf.h.in
 test/toolkit/Makefile.am
Arvid Norlander 2008-05-24

Fix for bug #1965528. Not sure if it fixes all cases of the bug.
 server/shop.c
Arvid Norlander 2008-05-21

Change a lot of static variables to static const, as they are never modified.
Also remove some non-needed nested (inside a function) extern. Also fix some
compiler warning in cfanim (on x86_64 int is not same size as long int!).
 common/exp.c
 common/logger.c
 common/los.c
 common/item.c